# CMAKE_Sample

./: CMakeLists.txt  README.md  ReadMe.txt  adder.cpp  main.cpp
Subtract_Lib/: CMakeLists.txt  subtracter.cpp  subtracter.h
